kubernetes: Fix alignment of icon for nodes

--- a/pkg/kubernetes/styles/details.less
+++ b/pkg/kubernetes/styles/details.less
@@ -37,6 +37,11 @@
     margin-right: 5px;
 }
 
+.content-filter i.pficon-container-node {
+    top: 3px;
+    margin-right: 5px;
+}
+
 .details-listing i.fa-cubes {
 
 }
